# solana_project

./: Cargo.toml
client/: Cargo.toml
client/src/: client.rs  config.rs  lib.rs  main.rs
common/: Cargo.toml
common/src/: instruction.rs
program/: Cargo.toml
program/src/: entrypoint.rs  processor.rs
