[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.4.0"
solana-sdk = "1.18.9"

getrandom = { version = "0.1.14", features = ["dummy"] }

common = { path ="../common"}
solana-logger = "1.18.9"
solana-client = "1.18.9"
solana-clap-utils = "1.18.9"

home = "0.5.9"
linked-hash-map = "0.5.6"
yaml-rust = "0.4.5"
