[package]
name = "program"
version = "0.1.0"
edition = "2021"
description = "Solana counter program"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
no-entrypoint = []

[dependencies]
borsh = "1.4.0"
solana-program = "1.18.4"
common = { path = "../common" }

[lib]
crate-type = ["cdylib", "lib"]
