[package]
name = "program"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "1.4.0"
solana-program = "1.18.9"
common = { path = "../common" }
borsh-derive = "1.4.0"


getrandom = { version = "0.1.14", features = ["dummy"] }
[dev-dependencies]


[lib]
crate-type = ["cdylib", "lib"]


